@@ -1,3 +1,7 @@
+* Jun 19 2001 hship
+
+Use a Browser on the PersonPage.  Clean up some redundant code.
+
 * Jun 18 2001 hship
 
 Vlib:
